@@ -7,6 +7,8 @@
 @item fixed bug #12910 and bug #15282 (@url{https://gna.org/bugs/?12910} and @url{https://gna.org/bugs/?15282}): file output for @option{-g} and @option{-m} parameter was broken
 
 @item added user configurations for the binaries used by the ProM plugin
+
+@item fixed bug #15678 (@url{https://gna.org/bugs/?15678}): @option{HOME} now switches on @option{TWOPHASE} if @option{STUBBORN} is also used
 @end itemize
 
 
